force-app/main/default/objects/Puppet_Performance__c/Puppet_Performance__c.object-meta.xml
<CustomObject>
    <description>Used to book puppeteers</description>
    <label>Puppet Performance</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Puppet Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Puppet Performances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>