force-app/main/default/objects/Puppet_Performance__c/fields/Hours_worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_worked__c</fullName>
    <label>Hours worked</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>