force-app/main/default/objects/Puppet_Performance__c/fields/Puppet_Show__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show__c</fullName>
    <label>Puppet Show</label>
    <referenceTo>PuppetShow__c</referenceTo>
    <relationshipLabel>Puppet Performances</relationshipLabel>
    <relationshipName>Puppet_Performances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>