force-app/main/default/objects/Puppet_Performance__c/fields/Puppeteer__c.field-meta.xml
<CustomField>
    <fullName>Puppeteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Puppeteer performing the show</inlineHelpText>
    <label>Puppeteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Puppet Performances</relationshipLabel>
    <relationshipName>Puppet_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>